StereoKit/Native/NativeAPI.cs


		[DllImport(dll, CallingConvention = call                 )] public static extern void                matrix_inverse      (in Matrix a, out Matrix out_matrix);
		[DllImport(dll, CallingConvention = call                 )] public static extern Matrix              matrix_invert       (in Matrix a);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                matrix_mul          (in Matrix a, in Matrix b, out Matrix out_matrix);
		[DllImport(dll, CallingConvention = call                 )] public static extern Vec3                matrix_mul_point    (in Matrix transform, in Vec3 point);
		[DllImport(dll, CallingConvention = call                 )] public static extern Vec4                matrix_mul_point4   (in Matrix transform, in Vec4 point);
		[DllImport(dll, CallingConvention = call                 )] public static extern Vec3                matrix_mul_direction(in Matrix transform, in Vec3 direction);
		[DllImport(dll, CallingConvention = call                 )] public static extern Quat                matrix_mul_rotation (in Matrix transform, in Quat orientation);
		[DllImport(dll, CallingConvention = call                 )] public static extern Pose                matrix_mul_pose     (in Matrix transform, in Pose pose);
		[DllImport(dll, CallingConvention = call                 )] public static extern Vec3                matrix_transform_pt (Matrix transform, Vec3 point);
		[DllImport(dll, CallingConvention = call                 )] public static extern Vec4                matrix_transform_pt4(Matrix transform, Vec4 point);
		[DllImport(dll, CallingConvention = call                 )] public static extern Vec3                matrix_transform_dir(Matrix transform, Vec3 direction);
		[DllImport(dll, CallingConvention = call                 )] public static extern Ray                 matrix_transform_ray(Matrix transform, Ray ray);
		[DllImport(dll, CallingConvention = call                 )] public static extern Quat                matrix_transform_quat(Matrix transform, Quat rotation);
		[DllImport(dll, CallingConvention = call                 )] public static extern Pose                matrix_transform_pose(Matrix transform, Pose pose);
		[DllImport(dll, CallingConvention = call                 )] public static extern Matrix              matrix_transpose    (Matrix transform);
		[DllImport(dll, CallingConvention = call                 )] public static extern Vec3                matrix_to_angles    (in Matrix transform);
		[DllImport(dll, CallingConvention = call                 )] public static extern Matrix              matrix_trs          (in Vec3 position, in Quat orientation, in Vec3 scale);
		[DllImport(dll, CallingConvention = call                 )] public static extern Matrix              matrix_t            (Vec3 position);
		[DllImport(dll, CallingConvention = call                 )] public static extern Matrix              matrix_r            (Quat orientation);
		[DllImport(dll, CallingConvention = call                 )] public static extern Matrix              matrix_s            (Vec3 scale);
		[DllImport(dll, CallingConvention = call                 )] public static extern Matrix              matrix_ts           (Vec3 position, Vec3 scale);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                matrix_trs_out      (out Matrix out_result, in Vec3 position, in Quat orientation, in Vec3 scale);
		[DllImport(dll, CallingConvention = call                 )] public static extern Matrix              matrix_perspective  (float fov_degrees, float aspect_ratio, float near_clip, float far_clip);
		[DllImport(dll, CallingConvention = call                 )] public static extern Matrix              matrix_orthographic (float width, float height, float near_clip, float far_clip);
		[DllImport(dll, CallingConvention = call                 )] public static extern int                 matrix_decompose    (in Matrix transform, out Vec3 out_position, out Vec3 out_scale, out Quat out_orientation);
		[DllImport(dll, CallingConvention = call                 )] public static extern Vec3                matrix_extract_translation(in Matrix transform);
		[DllImport(dll, CallingConvention = call                 )] public static extern Vec3                matrix_extract_scale(in Matrix transform);
		[DllImport(dll, CallingConvention = call                 )] public static extern Quat                matrix_extract_rotation(in Matrix transform);
		[DllImport(dll, CallingConvention = call                 )] public static extern Pose                matrix_extract_pose (in Matrix transform);

		///////////////////////////////////////////

		[DllImport(dll, CallingConvention = call                 )] public static extern int                 ray_intersect_plane (Ray ray, Vec3 plane_pt, Vec3 plane_normal, out float out_t);
		[DllImport(dll, CallingConvention = call                 )] public static extern int                 ray_from_mouse      (Vec2 screen_pixel_pos, out Ray out_ray);
		[DllImport(dll, CallingConvention = call                 )] public static extern Vec3                ray_point_closest   (Ray ray, Vec3 pt);

		///////////////////////////////////////////

		[DllImport(dll, CallingConvention = call                 )] public static extern Plane               plane_from_points   (Vec3 p1, Vec3 p2, Vec3 p3);
		[DllImport(dll, CallingConvention = call                 )] public static extern Plane               plane_from_ray      (Ray ray);
		[DllImport(dll, CallingConvention = call                 )] public static extern int                 plane_ray_intersect (Plane plane, Ray ray, out Vec3 out_pt);
		[DllImport(dll, CallingConvention = call                 )] public static extern int                 plane_line_intersect(Plane plane, Vec3 p1, Vec3 p2, out Vec3 out_pt);
		[DllImport(dll, CallingConvention = call                 )] public static extern Vec3                plane_point_closest (Plane plane, Vec3 pt);

		///////////////////////////////////////////

		[DllImport(dll, CallingConvention = call                 )] public static extern int                 sphere_ray_intersect(Sphere sphere, Ray ray, out Vec3 out_pt);
		[DllImport(dll, CallingConvention = call                 )] public static extern int                 sphere_point_contains(Sphere sphere, Vec3 pt);

		///////////////////////////////////////////

		[DllImport(dll, CallingConvention = call                 )] public static extern int                 bounds_ray_intersect(Bounds bounds, Ray ray, out Vec3 out_pt);
		[DllImport(dll, CallingConvention = call                 )] public static extern int                 bounds_point_contains(Bounds bounds, Vec3 pt);
		[DllImport(dll, CallingConvention = call                 )] public static extern int                 bounds_line_contains(Bounds bounds, Vec3 pt1, Vec3 pt2);
		[DllImport(dll, CallingConvention = call                 )] public static extern int                 bounds_capsule_contains(Bounds bounds, Vec3 pt1, Vec3 pt2, float radius);
		[DllImport(dll, CallingConvention = call                 )] public static extern Bounds              bounds_grow_to_fit_pt(Bounds bounds, Vec3 pt);
		[DllImport(dll, CallingConvention = call                 )] public static extern Bounds              bounds_grow_to_fit_box(Bounds bounds, Bounds box, in Matrix opt_transform);

		///////////////////////////////////////////

		[DllImport(dll, CallingConvention = call                 )] public static extern Color               color_hsv           (float hue, float saturation, float value, float transparency);
		[DllImport(dll, CallingConvention = call                 )] public static extern Vec3                color_to_hsv        (in Color color);
		[DllImport(dll, CallingConvention = call                 )] public static extern Color               color_lab           (float l, float a, float b, float transparency);
		[DllImport(dll, CallingConvention = call                 )] public static extern Vec3                color_to_lab        (in Color color);
		[DllImport(dll, CallingConvention = call                 )] public static extern Color               color_to_linear     (Color srgb_gamma_correct);
		[DllImport(dll, CallingConvention = call                 )] public static extern Color               color_to_gamma      (Color srgb_linear);

		///////////////////////////////////////////

		[DllImport(dll, CallingConvention = call                 )] public static extern IntPtr              gradient_create     ();
		[DllImport(dll, CallingConvention = call                 )] public static extern IntPtr              gradient_create_keys([In] GradientKey[] in_arr_keys, int count);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                gradient_add        (IntPtr gradient, Color color_linear, float position);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                gradient_set        (IntPtr gradient, int index, Color color_linear, float position);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                gradient_remove     (IntPtr gradient, int index);
		[DllImport(dll, CallingConvention = call                 )] public static extern int                 gradient_count      (IntPtr gradient);
		[DllImport(dll, CallingConvention = call                 )] public static extern Color               gradient_get        (IntPtr gradient, float at);
		[DllImport(dll, CallingConvention = call                 )] public static extern Color32             gradient_get32      (IntPtr gradient, float at);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                gradient_release    (IntPtr gradient);

		///////////////////////////////////////////

		[DllImport(dll, CallingConvention = call                 )] public static extern SphericalHarmonics  sh_create           ([In] SHLight[] in_arr_lights, int light_count);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                sh_brightness       (ref SphericalHarmonics ref_harmonics, float scale);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                sh_add              (ref SphericalHarmonics ref_harmonics, Vec3 light_dir, Vec3 light_color);
		[DllImport(dll, CallingConvention = call                 )] public static extern Color               sh_lookup           (in SphericalHarmonics harmonics, Vec3 normal);
		[DllImport(dll, CallingConvention = call                 )] public static extern Vec3                sh_dominant_dir     (in SphericalHarmonics harmonics);

		///////////////////////////////////////////
